# pm-copilot-engine

./: .env.example  .gitignore  AGENTS.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
cron/: jobs.py  scheduler.py  suggestions.py
cron/scripts/: classify_items.py
plugins/browser/browser_use/: provider.py
plugins/browser/browserbase/: provider.py
plugins/browser/firecrawl/: provider.py
plugins/context_engine/: __init__.py
plugins/dashboard_auth/basic/: __init__.py
plugins/dashboard_auth/nous/: __init__.py
plugins/dashboard_auth/self_hosted/: __init__.py
plugins/disk-cleanup/: disk_cleanup.py
plugins/google_meet/: cli.py  process_manager.py
plugins/google_meet/node/: registry.py  server.py
plugins/hermes-achievements/dashboard/: plugin_api.py
plugins/image_gen/fal/: __init__.py
plugins/image_gen/krea/: __init__.py
plugins/image_gen/openai/: __init__.py
plugins/image_gen/openai-codex/: __init__.py
plugins/image_gen/xai/: __init__.py
plugins/kanban/dashboard/: plugin_api.py
plugins/memory/: __init__.py
plugins/memory/byterover/: __init__.py
plugins/memory/hindsight/: __init__.py
plugins/memory/holographic/: __init__.py  store.py
plugins/memory/honcho/: __init__.py  cli.py  client.py
plugins/memory/mem0/: __init__.py
plugins/memory/openviking/: __init__.py
plugins/memory/retaindb/: __init__.py
plugins/memory/supermemory/: __init__.py
plugins/model-providers/alibaba/: __init__.py
plugins/model-providers/alibaba-coding-plan/: __init__.py
plugins/model-providers/anthropic/: __init__.py
plugins/model-providers/arcee/: __init__.py
plugins/model-providers/azure-foundry/: __init__.py
plugins/model-providers/bedrock/: __init__.py
plugins/model-providers/copilot/: __init__.py
plugins/model-providers/copilot-acp/: __init__.py
plugins/model-providers/custom/: __init__.py
plugins/model-providers/deepseek/: __init__.py
plugins/model-providers/gemini/: __init__.py
plugins/model-providers/gmi/: __init__.py
plugins/model-providers/huggingface/: __init__.py
plugins/model-providers/kilocode/: __init__.py
plugins/model-providers/kimi-coding/: __init__.py
plugins/model-providers/minimax/: __init__.py
plugins/model-providers/nous/: __init__.py
plugins/model-providers/novita/: __init__.py
plugins/model-providers/nvidia/: __init__.py
plugins/model-providers/ollama-cloud/: __init__.py
plugins/model-providers/openai-codex/: __init__.py
plugins/model-providers/opencode-zen/: __init__.py
plugins/model-providers/openrouter/: __init__.py
plugins/model-providers/qwen-oauth/: __init__.py
plugins/model-providers/stepfun/: __init__.py
plugins/model-providers/xai/: __init__.py
plugins/model-providers/xiaomi/: __init__.py
plugins/model-providers/zai/: __init__.py
plugins/observability/langfuse/: __init__.py
plugins/spotify/: client.py  tools.py
plugins/teams_pipeline/: cli.py  meetings.py  pipeline.py  store.py  subscriptions.py
plugins/video_gen/fal/: __init__.py
plugins/video_gen/xai/: __init__.py
plugins/web/brave_free/: provider.py
plugins/web/ddgs/: provider.py
plugins/web/exa/: provider.py
plugins/web/firecrawl/: provider.py
plugins/web/parallel/: provider.py
plugins/web/searxng/: provider.py
plugins/web/tavily/: provider.py
plugins/web/xai/: provider.py
pm_copilot_engine/: __init__.py  batch_runner.py  hermes_bootstrap.py  hermes_constants.py  hermes_logging.py  hermes_state.py  hermes_time.py  mcp_serve.py  model_tools.py  run_agent.py  toolset_distributions.py  toolsets.py  trajectory_compressor.py
pm_copilot_engine/_internal/: __init__.py
pm_copilot_engine/_internal/hermes_cli/: active_sessions.py  auth.py  auth_commands.py  azure_detect.py  backup.py  banner.py  browser_connect.py  bundles.py  callbacks.py  checkpoints.py  claw.py  cli_agent_setup_mixin.py  cli_commands_mixin.py  cli_output.py  clipboard.py  codex_runtime_plugin_migration.py  codex_runtime_switch.py  commands.py  config.py  container_boot.py  cron.py  curator.py  curses_ui.py  dashboard_register.py  debug.py  dep_ensure.py  dingtalk_auth.py  doctor.py  dump.py  env_loader.py  fallback_cmd.py  gateway.py  gateway_windows.py  goals.py  gui_uninstall.py  hooks.py  inventory.py  kanban.py  kanban_db.py  kanban_decompose.py  (+50 more)
pm_copilot_engine/agent/: __init__.py  account_usage.py  agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  auxiliary_client.py  azure_identity_adapter.py  background_review.py  bedrock_adapter.py  browser_registry.py  chat_completion_helpers.py  codex_responses_adapter.py  codex_runtime.py  coding_context.py  context_compressor.py  context_references.py  conversation_compression.py  conversation_loop.py  copilot_acp_client.py  credential_pool.py  credential_sources.py  credits_tracker.py  curator.py  curator_backup.py  display.py  file_safety.py  gemini_cloudcode_adapter.py  gemini_native_adapter.py  google_oauth.py  i18n.py  image_gen_provider.py  image_gen_registry.py  image_routing.py  insights.py  iteration_budget.py  memory_manager.py  message_sanitization.py  model_metadata.py  models_dev.py  nous_rate_guard.py  (+25 more)
pm_copilot_engine/providers/: __init__.py  base.py
pm_copilot_engine/tools/: __init__.py  approval.py  blueprints.py  browser_camofox.py  browser_camofox_state.py  browser_cdp_tool.py  browser_dialog_tool.py  browser_supervisor.py  browser_tool.py  budget_config.py  checkpoint_manager.py  clarify_gateway.py  clarify_tool.py  code_execution_tool.py  computer_use_tool.py  credential_files.py  cronjob_tools.py  debug_helpers.py  delegate_tool.py  discord_tool.py  env_passthrough.py  fal_common.py  feishu_doc_tool.py  feishu_drive_tool.py  file_operations.py  file_tools.py  fuzzy_match.py  homeassistant_tool.py  image_generation_tool.py  interrupt.py  kanban_tools.py  lazy_deps.py  managed_tool_gateway.py  mcp_oauth.py  mcp_oauth_manager.py  mcp_tool.py  memory_tool.py  microsoft_graph_client.py  mixture_of_agents_tool.py  openrouter_client.py  (+34 more)
tests/: conftest.py  test_agent_e2e.py  test_agent_integration.py  test_smoke.py
(+48 files in other folders)
